cabal-version: 2.2
name:
  nom
version:
  0.1
synopsis:
  bytearray parser combinators
description:
  bytearray parser combinators
homepage:
  https://github.com/chessai/nom
bug-reports:
  https://github.com/chessai/nom/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data, Parsing
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Nom
  build-depends:
    , base >= 4.12 && < 4.14
    , byteslice >= 0.1 && < 0.2
    , primitive >= 0.7 && < 0.8
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/nom.git
